# gravixlayer-python

./: .bumpversion.cfg  .coverage  .gitignore  CHANGELOG.md  COMPLETE_SANDBOX_GUIDE.md  COMPLETE_SANDBOX_TEST_RESULTS.md  E2B_LIFECYCLE_COMPARISON.md  LICENSE  README.md  SANDBOX_ANALYSIS.md  SDK_REFERENCE.md  e2b_lifecycle_comparison.py  e2b_lifecycle_report.json  example_simple.py  pyproject.toml  requirements.txt  sandbox.md  sandbox_demo.py  setup.py  test_complete_sandbox_lifecycle.py  test_http_support.py  test_sandbox_basics.py  test_stream.py  test_timeout.py  test_working_features.py  version.py
.github/workflows/: pypi-release.yml
docs/: SDK_REFERENCE.md
examples/: README.md  fastapi_agent.py  runtime_template_env.py  sandboxes.py  templates.py
examples/agents/javascript/node-hello/: package.json
examples/agents/javascript/node-hello/pages/api/: health.js
examples/agents/python/a2a-langgraph-agent/: .agent_state  .env.example  .gitignore  README.md  deploy.py  langgraph.json  requirements.txt  test_agent.py
examples/agents/python/a2a-langgraph-agent/agent_project/: app.py
examples/agents/python/a2a-langgraph-agent/simple_agent/: app.py
examples/agents/python/a2a-langgraph-agent/src/simple_agent/: app.py  graph.py
examples/agents/python/adk-quickstart/: README.md  gravixlayer.json  pyproject.toml
examples/agents/python/adk-quickstart/time_agent/: .env.example  __init__.py  agent.py
examples/agents/python/data-analyst-agent/: README.md  data_analyst_agent.py  requirements.txt
examples/apps/node-hello/pages/: index.js
examples/apps/node-hello/pages/api/: index.js
examples/apps/python-hello/: main.py
examples/network_policies/: 01_create_attach_and_use.py
examples/providers/: 01_create_attach_and_use.py
examples/runtimes/: 01_create_python_runtime.py  02_create_node_runtime.py  03_runtime_with_env_vars.py  04_run_python_code.py  05_run_node_code.py  06_run_shell_commands.py  07_file_operations.py  08_code_contexts.py  08_persistent_kernel_session.py  09_runtime_metrics.py  10_timeout_management.py  11_list_and_manage.py  12_context_manager.py  12_runtime_context_manager.py  13_enable_ssh.py  14_disable_ssh.py  15_revoke_and_reenable_ssh.py  16_connect_existing_runtime.py  16_runtime_git_operations.py  17_runtime_git_operations.py  18_stream_command_output.py  19_runtime_lifecycle.py  20_observability_verify.py  21_observability_logging.py  22_runtime_web_service.py  README.md
examples/sandboxes/: 01_create_python_sandbox.py  02_create_node_sandbox.py  03_sandbox_with_env_vars.py  04_run_python_code.py  05_run_node_code.py  06_run_shell_commands.py  07_file_operations.py  08_code_contexts.py  09_sandbox_metrics.py  10_timeout_management.py  11_list_and_manage.py  12_context_manager.py  README.md
examples/templates/: 01_python_docker_image.py  02_node_docker_image.py  03_python_local_dir.py  04_node_local_dir.py  05_node_git_clone.py  06_python_private_git.py  07_dockerfile.py  08_list_and_delete.py  README.md
examples/templates/dockerfiles/: base.Dockerfile
gravixlayer/: __init__.py  __main__.py  cli.py  client.py
gravixlayer/resources/: __init__.py  accelerators.py  async_completions.py  async_embeddings.py  async_files.py  async_sandbox.py  async_templates.py  completions.py  deployments.py  embeddings.py  files.py  sandbox.py  templates.py
gravixlayer/resources/chat/: completions.py
gravixlayer/resources/memory/: __init__.py  agent.py  compatibility.py  dynamic_config.py  gravix_memory.py  simple_memory.py  sync_agent.py  sync_compatibility.py  sync_examples.py  sync_external_memory.py  sync_memory.py  types.py  unified_agent.py  unified_memory.py  unified_sync_memory.py
gravixlayer/resources/vectors/: __init__.py  async_indexes.py  async_main.py  async_vectors.py  indexes.py  main.py  vectors.py
gravixlayer/types/: __init__.py  accelerators.py  async_client.py  chat.py  completions.py  deployments.py  embeddings.py  exceptions.py  files.py  sandbox.py  templates.py  vectors.py
scripts/: README.md  bump_version.py  commit.ps1  release-commit.ps1  release.ps1  release.sh
src/gravixlayer/: __init__.py  __main__.py  _cli_progress.py  _request_utils.py  _resource_utils.py  client.py  examples_env.py  telemetry.py
src/gravixlayer/a2a/: __init__.py  _runtime.py
src/gravixlayer/cli/: __init__.py  client_factory.py  cmd_runtime.py  cmd_template.py  formatters.py  main.py
src/gravixlayer/frameworks/: __init__.py  anthropic.py  base.py  crewai.py  google_adk.py  langchain.py  langgraph.py  openai_agents.py  strands.py
src/gravixlayer/resources/: agents.py  async_agents.py  async_identity.py  async_network_policies.py  async_runtime.py  async_runtime_service.py  async_secret_providers.py  async_templates.py  identity.py  network_policies.py  runtime.py  runtime_files.py  runtime_git.py  runtime_service.py  secret_providers.py  templates.py
src/gravixlayer/runtime/: __init__.py  app.py  autoserve.py  config.py  health.py  middleware.py  server.py
src/gravixlayer/types/: __init__.py  agents.py  async_client.py  network_policies.py  runtime.py  secret_providers.py  templates.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_live_templates.py  test_runtime_resource.py  test_templates.py  test_types_runtime.py  utils.py
tests/integration_tests/: __init__.py  test_live_templates.py
tests/unit_tests/: __init__.py  test_logging_bridge.py  test_telemetry.py  test_traced.py
tests/unit_tests/client/: test_client.py
tests/unit_tests/internal/: test_cli_progress.py  test_request_utils.py  test_resource_utils.py
tests/unit_tests/resources/: test_agents_resource.py  test_network_policies.py  test_runtime_resource.py  test_secret_providers.py  test_templates.py
tests/unit_tests/runtime/: test_a2a_runtime.py  test_autoserve.py  test_framework_adapters.py  test_google_adk_native.py  test_langgraph_adapter.py
tests/unit_tests/types/: test_types_agents.py  test_types_runtime.py
