[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gravixlayer"
version = "0.0.54"
description = "GravixLayer Python SDK - Official Python client for GravixLayer API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "Team Gravix", email = "info@gravixlayer.com"},
]
keywords = ["gravixlayer", "llm", "ai", "api", "sdk", "compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
     "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
    "types-requests>=2.25.0",
]

[project.scripts]
gravixlayer = "gravixlayer.cli:main"

[project.urls]
Homepage = "https://github.com/gravixlayer/gravixlayer-python"
Repository = "https://github.com/gravixlayer/gravixlayer-python"
Issues = "https://github.com/gravixlayer/gravixlayer-python/issues"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "test", ".venv", "venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.radon]
exclude = "tests/*,test/*,.venv/*,venv/*,build/*,dist/*"
