[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gravixlayer"
version = "0.1.54"
description = "Gravix Layer Python SDK — agent runtimes and templates (Alpha; API may evolve). See docs.gravixlayer.ai."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Gravix Layer", email = "support@gravixlayer.ai"},
]
keywords = ["gravixlayer", "ai", "cloud", "runtime", "sdk", "templates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx[http2]>=0.24.0",
]

[project.scripts]
gravixlayer-runtime = "gravixlayer.runtime.autoserve:main"

[project.optional-dependencies]
runtime = [
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.30.0",
]
a2a = [
    "a2a-sdk[http-server]>=1.0.0",
    "protobuf<7",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.38.0",
]
langchain = [
    "langchain>=1.0",
]
langgraph = [
    "langgraph>=1.0.0",
]
google-adk = [
    "google-adk[a2a]>=1.0.0",
]
agents = [
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.30.0",
    "a2a-sdk[http-server]>=1.0.0",
    "protobuf<7",
    "google-adk[a2a]>=1.0.0",
    "langchain>=1.0",
    "langgraph>=1.0.0",
]
strands = [
    "strands-agents>=1.0",
]
anthropic = [
    "claude-agent-sdk>=0.1.0",
]
dev = [
    "pylint>=3.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
    "types-requests>=2.25.0",
]
# Unit + integration test dependencies (CI / local: pip install -e ".[test]")
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gravixlayer = ["py.typed"]

[project.urls]
Homepage = "https://gravixlayer.ai"
Documentation = "https://docs.gravixlayer.ai"
Repository = "https://github.com/gravixlayer/gravixlayer-python"
Issues = "https://github.com/gravixlayer/gravixlayer-python/issues"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "test", ".venv", "venv", "build", "dist"]
skips = ["B101", "B601"]

[tool.radon]
exclude = "tests/*,test/*,.venv/*,venv/*,build/*,dist/*"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit_tests", "tests/integration_tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: live API tests (require credentials; skipped when unset)",
]
